Also allow to increase the progress of a fight or a journey

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -170,6 +170,8 @@ Delete the current character without warning!
 The same as
 .Ic decrease ,
 only it increases the stat by 1.
+You can also increase the progress of a fight or a journey.
+Hereby, the progress is automatically calculated depending on the difficulty.
 .It Ic print
 Print the current character's stats.
 .It Ic toggle Cm stat
