Add helper function to mark progress

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -102,6 +102,18 @@ Roll one
 .It Ic oracle
 Roll one
 .Em oracle die .
+.It Ic markprogress
+Mark progress according to the difficulty.
+.Nm
+progresses the undertaking in the following order:
+.Bl -enum -compact
+.It
+Fight
+.It
+Delve
+.It
+Journey
+.El
 .It Ic yesorno Cm odds
 Roll two
 .Em challenge dice
