Add support for generating random NPCs
The NPC will be generated from the oracle tables and will have a
name, a goal, a role and an attitude.

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd September 19, 2021
+.Dd September 27, 2021
 .Dt ISSCROLLS 1
 .Os
 .Sh NAME
@@ -507,6 +507,8 @@ can be provided.
 The following commands provide results from the various oracle tables in the
 Rulebook.
 .Bl -tag
+.It Ic generatenpc
+Generate a random NPC with a role, a goal and their disposition.
 .It Ic actionoracle
 Show a random action.
 .It Ic combataction
