Make it possible to "spent" experience
Simple addition to the in-/decrease command

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -175,6 +175,8 @@ Spirit
 Supply
 .It
 Exp
+.It
+Expspent (The experience you spent to acquire new resources or improve existing ones).
 .El
 .It Ic delete
 Delete the current character without warning!
