Be honest about what is saved

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -138,7 +138,8 @@ List all available characters.
 .It Ic quit
 Quits
 .Nm
-and saves all characters and the command line history.
+and saves all characters, journeys, fights, delves and the command line
+history.
 .El
 .Ss Dice Rolls
 The following commands can be used to roll dice according to the game's
