Add -b option to suppress banner on startup
Usefull suggeestion from u/BlindGuyNW on r/Ironsworn

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -24,7 +24,7 @@
 tabletop RPG
 .Sh SYNOPSIS
 .Nm isscrolls
-.Op Fl c
+.Op Fl bc
 .Sh DESCRIPTION
 .Nm
 is a simple toolkit for players of the Ironsworn tabletop RPG.
@@ -34,6 +34,8 @@ It also provides results from the static oracle tables from the
 official rulebook.
 The options are as follows:
 .Bl -tag -width Ds
+.It Fl b
+Suppress the banner on startup.
 .It Fl c
 Enable colors.
 .El
