Implement markabond command to mark a bond on a weak hit

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -167,6 +167,12 @@ Roll one
 .It Ic oracle
 Roll one
 .Em oracle die .
+.It Ic markabond
+Mark a bond.
+Usually, this is done automatically if you have a strong hit on the
+.Ic forgeabond
+move.
+On a weak hit, consult the Rulebook first and then use this command.
 .It Ic markprogress
 Mark progress according to the difficulty.
 .Nm
