Implement the concept of simple and deadly weapons
Previously all calculations were based on "simple" weapons doing
1 harm.

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -249,6 +249,12 @@ Exp
 .It
 Expspent (The experience you spent to acquire new resources or improve
 existing ones).
+.It
+Weapon (hereby
+.Em 1
+represents a simple weapon doing 1 harm and
+.Em 2
+represents a deadly weapon doing 2 harm).
 .El
 .It Ic delete
 Delete the current character without warning!
