Unwrap a non-wrappable line, remove .Os and change date

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -14,14 +14,11 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd September 27, 2021
+.Dd October 3, 2021
 .Dt ISSCROLLS 1
-.Os
 .Sh NAME
 .Nm isscrolls
-.Nd Simple player toolkit for the
-.Em Ironsworn
-tabletop RPG
+.Nd Simple player toolkit for the Ironsworn tabletop RPG
 .Sh SYNOPSIS
 .Nm isscrolls
 .Op Fl bc
