Update man page with new commands

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -409,6 +409,10 @@ move.
 An additional
 .Op bonus
 can be provided.
+.It Ic writeyourepilogue
+Roll an
+.Em Write your epilogue
+move.
 .El
 .Ss Combat Moves
 When there are no other options, when the sword flips free of its sheath, when
@@ -513,6 +517,13 @@ move.
 In case the character dies, it is marked as such and
 .Dq Deceased
 is printed in the character's statistics.
+An additional
+.Op bonus
+can be provided.
+.It Ic facedesolation Op bonus
+Roll a
+.Em Face Desolation
+move.
 An additional
 .Op bonus
 can be provided.
