--- a/isscrolls.1
+++ b/isscrolls.1
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd October 4, 2021
+.Dd October 11, 2021
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
@@ -139,6 +139,8 @@ Quits
 .Nm
 and saves all characters, journeys, fights, delves and the command line
 history.
+.It Ic save
+Saves the current character including a running journey, fight, or delve.
 .El
 .Ss Dice Rolls
 The following commands can be used to roll dice according to the game's
