Add burnmomentum here as well

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd October 11, 2021
+.Dd October 13, 2021
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
@@ -202,6 +202,8 @@ Unlikely
 .It
 Small chance
 .El
+.It Ic burnmomentum
+Burn your character's momentum and set it to the reset momentum.
 .El
 .Ss Character Commands
 The following commands can be used to modify your character.
