Oracles are from both Ironsworn and Delve

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -1,5 +1,5 @@
 .\"
-.\" Copyright (c) 2021 Matthias Schmidt
+.\" Copyright (c) 2021-22 Matthias Schmidt
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd October 13, 2021
+.Dd March 31, 2022
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
@@ -584,7 +584,11 @@ An additional
 can be provided.
 .El
 .Ss Oracle Moves
-The following commands provide results from the various oracle tables in the
+The following commands provide results from the various oracle tables in both
+the
+.Em Ironsworn
+and
+.Em Ironsworn Delve
 Rulebook.
 .Bl -tag
 .It Ic generatenpc
