Add code to show 'settlement trouble'

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd March 31, 2022
+.Dd April 04, 2022
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
@@ -625,6 +625,8 @@ Show a random rank.
 Show a random Ironlands region.
 .It Ic revealadanger
 Show a random danger region.
+.It Ic settlementtrouble
+Show a random settlement trouble.
 .It Ic theme
 Show a random theme.
 .It Ic varou
