Max progress won't be shown any longer

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -102,18 +102,22 @@ For lower difficulties (
 .Em Troublesome
 -
 .Em Formidable
-), progress will be shown as absolute numbers, e.g. 2/10.
+), progress will be shown as absolute numbers, e.g. 2.
 For higher difficulties (
 .Em Extreme
 and
 .Em Epic
 ), progress will be shown as decimal numbers and 0.25 represents one tick,
-e.g. 0.75/10 means that the character already made 3 ticks progress.
+e.g. 0.75 means that the character already made 3 ticks progress.
+Since
+.Em Ironsworn's
+progress bar is always 10 boxes, only the current value will be shown.
 .Pp
 In case the rulebook gives you more options, you always have the possibility
 to manually mark progress with the
 .Ic markprogress
 command.
+In case you have an active vow, its title and description will be shown.
 .Sh AVAILABLE COMMANDS
 The following sections shows all commands that can be entered on
 .Nm
