Fix missing emphasis by using lower-case 'an'

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -347,7 +347,7 @@ An additional
 can be provided.
 .It Ic secureanadvantage Cm stat Op bonus
 Roll a
-.Em Secure An Advantage
+.Em Secure an Advantage
 move using the character's stat named
 .Cm stat .
 This move can done using the following stats: edge, heart, iron, shadow, and
