Explain the recent change in the man page

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd July 07, 2022
+.Dd August 24, 2022
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
@@ -493,6 +493,8 @@ move.
 An additional
 .Op bonus
 can be provided.
+.Nm
+checks automatically that your last move was a strong hit.
 .It Ic strike Cm stat Op bonus
 Roll a
 .Em Strike
