isscrolls is no longer simple.  Change wording while here

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -14,20 +14,20 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd October 19, 2022
+.Dd December 27, 2022
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
-.Nd Simple player toolkit for the Ironsworn tabletop RPG
+.Nd Player toolkit for the Ironsworn tabletop RPG
 .Sh SYNOPSIS
 .Nm isscrolls
 .Op Fl bc
 .Sh DESCRIPTION
 .Nm
-is a simple toolkit for players of the Ironsworn tabletop RPG.
-It is intended for both solo and co-op player and allows to roll
-action, oracle rolls and others.
-It also provides results from the static oracle tables from the
+is a toolkit for players of the Ironsworn tabletop RPG.
+It is intended for both solo and co-op players and allows to roll
+action, oracle and other die.
+It also provides static oracle tables results from the
 official rulebook.
 The options are as follows:
 .Bl -tag -width Ds
