Enhance description of the -c option

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -1,5 +1,5 @@
 .\"
-.\" Copyright (c) 2021-22 Matthias Schmidt
+.\" Copyright (c) 2021-23 Matthias Schmidt
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd December 27, 2022
+.Dd May 18, 2023
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
@@ -34,7 +34,8 @@ The options are as follows:
 .It Fl b
 Suppress the banner on startup.
 .It Fl c
-Enable colors.
+Enable colors and additional characters to beautify output.
+Recommended if you don't use a screen reader or a braille terminal.
 .El
 .Sh HOW TO USE
 .Nm
