Document new SF combat moves

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -514,6 +514,24 @@ e.g. 0.75/10 means that the character already made 3 ticks progress.
 An additional
 .Op bonus
 can be provided.
+.It Ic gainground Cm stat Op bonus
+Roll an
+.Em Gain Ground
+move using the character's stat named
+.Cm stat .
+This move can done using all stats.
+An additional
+.Op bonus
+can be provided.
+.It Ic reactunderfire Cm stat Op bonus
+Roll an
+.Em React under Fire
+move using the character's stat named
+.Cm stat .
+This move can done using all stats.
+An additional
+.Op bonus
+can be provided.
 .It Ic endthefight Op bonus
 Roll an
 .Em End the Fight
