Document new SF suffer move

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -650,6 +650,13 @@ amount of
 .Em Spirit
 to suffer has to be provided and is not implemented within
 .Nm .
+.It Ic sacrificeresources Cm value
+Roll an
+.Em Sacrifice Resources
+move.
+Provide a
+.Cm value
+that will be removed from your supply.
 .El
 .Ss Delve Moves
 These moves are part of the
