Mention SF support here as well

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -18,13 +18,14 @@
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
-.Nd Player toolkit for the Ironsworn tabletop RPG
+.Nd Player toolkit for the Ironsworn Family tabletop RPG
 .Sh SYNOPSIS
 .Nm isscrolls
 .Op Fl bc
 .Sh DESCRIPTION
 .Nm
 is a toolkit for players of the Ironsworn tabletop RPG.
+It supports classic Ironsworn, Delve, Starforged and Sundered Isles.
 It is intended for both solo and co-op players and allows to roll
 action, oracle and other die.
 It also provides static oracle tables results from the
@@ -803,6 +804,13 @@ normally exists with 0 or with 1 if an error occurred.
 .%A Shawn Tomkin
 .%B Ironsworn Delve. Perilous Expeditions for the Ironsworn RPG
 .%D 2020
+.%U https://www.ironswornrpg.com/
+.Re
+.Pp
+.Rs
+.%A Shawn Tomkin
+.%B Ironsworn Starforged
+.%D 2022
 .%U https://www.ironswornrpg.com/
 .Re
 .Sh AUTHORS
