Mention expeditions here as well

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -96,7 +96,7 @@ does not suffer from this particular debility while a 1 means that they
 suffer from it.
 .Pp
 The last line shows the number of bonds the character has.
-.Ss Vows, Journeys, Fights and Delve
+.Ss Vows, Expeditions, Journeys, Fights and Delve
 As soon as a character starts one of them, the prompt changes and
 displays the current undertaking and the current progress.
 .Pp
