--- a/isscrolls.1
+++ b/isscrolls.1
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd June 24, 2024
+.Dd September 14, 2024
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
@@ -77,7 +77,7 @@ Momentum: 10/10 [2] Health: 4/5 Spirit: 5/5 Supply: 3/5
 Wounded:        0 Unprepared:   0 Encumbered:   0 Shaken:       0
 Corrupted:      0 Tormented:    0 Cursed:       0 Maimed:       1
 
-Bonds: 0.00
+Bonds: 0.00 (Legacy: 0) Quests: 0.00 (Legacy: 0) Discoveries: 0.00 (Legacy: 0)
 .Ed
 .Pp
 The first line shows the character's name, their experience points, the
@@ -95,7 +95,8 @@ Debilities are shown in the next two lines, a 0 means that the character
 does not suffer from this particular debility while a 1 means that they
 suffer from it.
 .Pp
-The last line shows the number of bonds the character has.
+The last line shows the character's progress for bonds, quests and
+discoveries including the progress on the legacy tracks.
 .Ss Vows, Expeditions, Journeys, Fights and Delve
 As soon as a character starts one of them, the prompt changes and
 displays the current undertaking and the current progress.
