--- a/isscrolls.1
+++ b/isscrolls.1
@@ -58,6 +58,30 @@ is linked against
 thus any shortcut or character combination that work with a common
 .Ux
 shell also work for the built-in shell.
+.Ss Information for general Gameplay
+.Nm
+supports all games of the Ironsworn family and allows players to freely
+use moves or actions from all of them.
+Therefore, depending on the game you own you might see statistics or
+information that belong to another game, e.g., characters get experience
+points in classic Ironsworn for fulfilling vows while in Starforged they
+get experience via the so called
+.Em legacy track .
+Both ways are supported by
+.Nm
+so choose the one that fits your game the most.
+.Pp
+Sometimes
+.Nm
+cannot take a decision for you and refers you to the official rulebook.
+In these cases choose the outcome most suitable for your character and
+manipulate the stats with the
+.Ic increase ,
+.Ic decrease
+or
+.Ic toogle
+commands.
+See the section below for more information how the commands work.
 .Ss Character Display
 .Nm
 is best used if you generate a character with the
