Harmonize description between man page and README

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -18,7 +18,7 @@
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
-.Nd Player toolkit for the Ironsworn Family tabletop RPG
+.Nd Player toolkit for the Ironsworn Family Tabletop RPG
 .Sh SYNOPSIS
 .Nm isscrolls
 .Op Fl bc
@@ -26,10 +26,10 @@
 .Nm
 is a toolkit for players of the Ironsworn tabletop RPG.
 It supports classic Ironsworn, Delve, Starforged and Sundered Isles.
-It is intended for both solo and co-op players and allows to roll
-action, oracle and other die.
-It also provides static oracle tables results from the
-official rulebook.
+It is intended for both solo and co-op play and allows to track your
+character's progress including vows, roll on adventure and exploration moves,
+tracks progress for fights, journeys and expeditions and provides results
+from the static oracle tables from the official rulebook.
 The options are as follows:
 .Bl -tag -width Ds
 .It Fl b
