Adapt man page to latest display changes re legacy tracks

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -101,7 +101,7 @@ Momentum: 10/10 [2] Health: 4/5 Spirit: 5/5 Supply: 3/5
 Wounded:        0 Unprepared:   0 Encumbered:   0 Shaken:       0
 Corrupted:      0 Tormented:    0 Cursed:       0 Maimed:       1
 
-Bonds: 0.00 (Legacy: 0) Quests: 0.00 (Legacy: 0) Discoveries: 0.00 (Legacy: 0)
+Bonds: 0.00 (L: 0) Quests: 0.00 (L: 0) Discoveries: 0.00 (L: 0)
 .Ed
 .Pp
 The first line shows the character's name, their experience points, the
