Document make a connection move

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -500,6 +500,17 @@ Roll a
 move.
 Provide an optional
 .Op bonus .
+.It Ic makeaconnection Op bonus
+Roll a
+.Em Make a Connection
+move.
+An additional
+.Op bonus
+can be provided.
+Note that
+.Nm
+does not ask your for a rank and does not track connections, this is up to
+the player.
 .It Ic forgeabond Op bonus
 Roll a
 .Em Forge a Bond
