Add the "test your relationship" move

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -525,6 +525,13 @@ move.
 An additional
 .Op bonus
 can be provided.
+.It Ic testyourrelationship Op bonus
+Roll a
+.Em Test Your Relationship
+move.
+An additional
+.Op bonus
+can be provided.
 .It Ic writeyourepilogue
 Roll a
 .Em Write your epilogue
