Document moonoracle command

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd September 14, 2024
+.Dd September 16, 2024
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
@@ -788,6 +788,10 @@ Show a random Ironlander name.
 Show a random location.
 .It Ic locationdescription
 Show a random description for a location.
+.It Ic moonoracle
+Roll random on the
+.Em Sundered Isles
+moons, Wraith and Cinder.
 .It Ic mysticbackslash
 Show a random mystic backslash.
 .It Ic paytheprice
