Document the cursed die also in the man page

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd September 16, 2024
+.Dd September 24, 2024
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
@@ -37,6 +37,13 @@ Suppress the banner on startup.
 .It Fl c
 Enable colors and additional characters to beautify output.
 Recommended if you don't use a screen reader or a braille terminal.
+.It Fl x
+Roll a
+.Dq cursed die
+alongside the other dice.
+This is a speciality of the
+.Em Sundered Isles
+expansion, however, it can be used for the other games as well.
 .El
 .Sh HOW TO USE
 .Nm
